* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Added Table#transpose to to allow use of vertically aligned table keys (Torbjørn Vatn, Aslak Hellesøy)
* Added Table#map_headers to to allow use of more readable headers (Rob Holland)
* New -S/--step-definitions option. Useful (among other things) for tools that implement automcompletion. (#208 Aslak Hellesøy).
* The cucumber.rake file defines a dummy :features task if Cucumber is not installed (#225 Josh Nichols)
* Added map_column! to AST tables to ease casting of cell values into relevant types (#223 Rob Holland)
  Given /^an expense report for (.*) with the following posts:$/ do |date, posts_table|
    posts_table.map_column!('amount') { |a| a.to_i }
    posts_table.hashes.each do |post|
      # post['amount'] is a Fixnum, rather than a String
    end
  end
  Mapping a column which is not specified in the table will produce an error unless you explicitly pass a 2nd false argument. This is to allow different Scenarios to re-use the step definition with different table columns.
* New --no-diff option (#218 Bryan Ash)
* Rails generators supports testunit and rspec option, defaulting to rspec (#217 Josh Nichols)
* Sinatra Example (#204 Rob Holland)
* Keywords can be aliased in languages.yml. See English for an example (examples: Examples|Scenarios)
* Adding support for Background (#153 Joseph Wilk) 
* Added Česky/Czech (Vojtech Salbaba)
* New --no-multiline option to reduce noise. Useful if lots of features are failing.
* Added ability to pass URIs to cucumber in addition to files and directories. Useful for troubleshooting! (Aslak Hellesøy)
* Groups of tabular scenarios (#57 Aslak Hellesøy)