@@ -1,20 +1,7 @@
 module Cucumber
   class Broadcaster
-    @@instances = []
-
     def initialize(receivers = [])
       @receivers = receivers
-      @@instances << self
-    end
-
-    def self.announce(announcement)
-      instances.each do |instance|
-        instance.announce(announcement)
-      end
-    end
-
-    def self.instances
-      @@instances
     end
 
     def method_missing(method_name, *args)
@@ -22,6 +9,5 @@ module Cucumber
         receiver.__send__(method_name, *args)
       end
     end
-    
   end
 end
