@@ -167,11 +167,6 @@ module Cucumber
         @io.flush
       end
 
-      def announce(announcement)
-        @io.puts(announcement)
-        @io.flush
-      end
-
       private
 
       def print_summary
