@@ -32,12 +32,6 @@ module Cucumber
         progress(status) if (status != :thead) && !@multiline_arg
       end
 
-      def announce(announcement)
-        @io.puts(announcement)
-        @io.flush
-      end
-
-      
       private
 
       def print_summary
