@@ -30,10 +30,6 @@ module Cucumber
       def visit_step_name(keyword, step_match, status, source_indent)
         @rerun = true if [:failed].index(status)
       end
-
-      def announce(announcement)
-      end
-
     end
   end
 end
