@@ -7,7 +7,7 @@ module Cucumber
       end
     end
     
-    attr_writer :__cucumber_step_mother, :__cucumber_current_step
+    attr_writer :__cucumber_step_mother, :__cucumber_visitor, :__cucumber_current_step
 
     # Call a step from within a step definition
     def __cucumber_invoke(name, multiline_argument=nil) #:nodoc:
@@ -24,6 +24,17 @@ module Cucumber
     def table(text, file=nil, line_offset=0)
       @table_parser ||= Parser::TableParser.new
       @table_parser.parse_or_fail(text.strip, file, line_offset)
+    end
+
+    # Output +announcement+ alongside the formatted output.
+    # This is an alternative to using Kernel#puts - it will display
+    # nicer, and in all outputs (in case you use several formatters)
+    #
+    # Beware that the output will be printed *before* the corresponding
+    # step. This is because the step itself will not be printed until
+    # after it has run, so it can be coloured according to its status.
+    def announce(announcement)
+      @__cucumber_visitor.announce(announcement)
     end
 
     def pending(message = "TODO")
